test splats added

--- a/splats/Playroom.html
+++ b/splats/Playroom.html
@@ -193,15 +193,15 @@
       if(location.host.includes('hf.space')) document.body.classList.add('nohf');
     </script>
     <div id="info">
-      <h3 class="nohf">WebGL 3D Gaussian Splat Viewer</h3>
-      <p>
+      <!-- <h3 class="nohf">WebGL 3D Gaussian Splat Viewer</h3> -->
+      <!-- <p>
       <small class="nohf">
         By <a href="https://twitter.com/antimatter15">Kevin Kwok</a>.
         Code on
         <a href="https://github.com/antimatter15/splat">Github</a
         >.
       </small>
-    </p>
+    </p> -->
 
       <details>
       <summary>Use mouse or arrow keys to navigate.</summary>
@@ -273,6 +273,6 @@ other
     <div id="caminfo">
       <span id="camid"></span>
     </div>
-    <script src="test_splat_main.js"></script>
+    <script src="Playroom.js"></script>
   </body>
 </html>
