--- a/news.html
+++ b/news.html
@@ -212,6 +212,14 @@ input:checked + input ~ input:before {
         <div class="content">
         <table>
           <tr>
+            <td><font color="#00b4d9">Dec 2025 </font></td>
+            <td>| Paper accepted at <a target="_blank" href="https://2026.hci.international/index.html">HCI International 2026</a> </td>
+          </tr>
+          <tr>
+            <td><font color="#00b4d9">Dec 2025 </font></td>
+            <td>| I defended my PhD Proposal. I am a PhD candidate now.</td>
+          </tr>
+          <tr>
             <td><font color="#00b4d9">Aug 2025 </font></td>
             <td>| Short Paper accepted at <a target="_blank" href="https://assets25.sigaccess.org/index.html">ACM Conference on Computers and Accessibility (ASSETS'25)</a></td>
           </tr>
