--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="section-title">
           <h2>About</h2>
           <p>
-            I am a PhD Student in <a target="_blank" href="https://www.rit.edu/study/computing-and-information-sciences-phd">GCCIS</a> at <a 
+            I am a PhD Candidate at <a target="_blank" href="https://www.rit.edu/study/computing-and-information-sciences-phd">GCCIS</a>, <a 
             href="https://www.rit.edu" target="_blank">Rochester Institute of Technology</a> (RIT) and work at <a 
             target="_blank" href="https://www.rit.edu/computing/sappi" >Sappi-RIT Digital Innovation Lab</a>. 
             I am advised by <a target="_blank" href="https://www.rit.edu/directory/kxpigm-konstantinos-papangelis">Konstantinos Papangelis</a> 
@@ -144,8 +144,7 @@
           and <a target="_blank" href="http://khan.gr/">Vassilis-Javed Khan</a> who is UX Lead at 
           <a target="_blank" href="https://www.sappi.com/">Sappi</a> Belgium.
           <p>
-            I research and develop visual analytics tools with user-centered design in the business domain.
-            My work uses interactive machine learning experience for data-driven decision-making processes, building upon core principles of Human-AI Interaction.
+            I work in human AI interaction, with research on interactive AI, human AI reliance, and practical design challenges when deploying AI systems.
           </p> 
         <p>
           I have <a href="https://www.bahria.edu.pk/buic" target="_blank">masters</a> and <a href="https://must.edu.pk/software-engineering/" target="_blank">bachelors</a> in software engineering. 
@@ -358,6 +357,14 @@
         </div>
         <table>
           <tr>
+            <td><font color="#00b4d9">Dec 2025 </font></td>
+            <td>| Paper accepted at <a target="_blank" href="https://2026.hci.international/index.html">HCI International 2026</a> </td>
+          </tr>
+          <tr>
+            <td><font color="#00b4d9">Dec 2025 </font></td>
+            <td>| I defended my PhD Proposal. I am a PhD candidate now.</td>
+          </tr>
+          <tr>
             <td><font color="#00b4d9">Aug 2025 </font></td>
             <td>| Short Paper accepted at <a target="_blank" href="https://assets25.sigaccess.org/index.html">ACM Conference on Computers and Accessibility (ASSETS'25)</a></td>
           </tr>
@@ -377,16 +384,7 @@
             <td><font color="#00b4d9">May 2024 </font></td>
             <td>| Paper accepted at <a target="_blank" href="https://www.sciencedirect.com/journal/international-journal-of-human-computer-studies">International Journal of Human-Computer Studies</a></td>
           </tr>
-          <tr>
-            <td><font color="#00b4d9">May 2023 </font></td>
-            <td>| I defended my PhD Research Potential Assessment</td>
-          </tr>
           
-          <tr>
-            <td><font color="#00b4d9">Mar 2023 </font></td>
-            <td>| Paper accepted at <a target="_blank" href="https://chi2023.acm.org/">ACM Conference on Human Factors in Computing Systems (CHI'23)</a></td>
-          </tr>
-
         </table>
         <br/>
           <p><a href="news.html">Not so news anymore</a></p>
