portfolio link correction

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
               <img src="assets/img/portfolio/P1_2.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/P1_2.png" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox" title="View Gallery"><i class="bx bx-plus"></i></a>
-                <a href="projects/dynamic_allocation.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="dynamic_allocation.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
