--- a/index.html
+++ b/index.html
@@ -356,6 +356,10 @@
         </div>
         <table>
           <tr>
+            <td><font color="#00b4d9">Jan 2026 </font></td>
+            <td>| Paper accepted at <a target="_blank" href="https://chi2026.acm.org/">ACM Conference on Human Factors in Computing Systems (CHI'26)</a> </td>
+          </tr>
+          <tr>
             <td><font color="#00b4d9">Dec 2025 </font></td>
             <td>| Paper accepted at <a target="_blank" href="https://2026.hci.international/index.html">HCI International 2026</a> </td>
           </tr>
