--- a/index.html
+++ b/index.html
@@ -357,6 +357,11 @@
         <table>
           <tr>
             <td><font color="#00b4d9">Jan 2026 </font></td>
+            <td>| I will be serving Area Chair at <a target="_blank" href="https://chi2026.acm.org/">CHI 2026</a> for the Poster Track.</td>
+          </tr>
+          <tr>
+          <tr>
+            <td><font color="#00b4d9">Jan 2026 </font></td>
             <td>| Paper accepted at <a target="_blank" href="https://chi2026.acm.org/">ACM Conference on Human Factors in Computing Systems (CHI'26)</a> </td>
           </tr>
           <tr>
@@ -378,10 +383,6 @@
           <tr>
             <td><font color="#00b4d9">Dec 2024 </font></td>
             <td>| Case Study Paper accepted at <a target="_blank" href="https://chi2025.acm.org/">ACM Conference on Human Factors in Computing Systems (CHI'25)</a></td>
-          </tr>
-          <tr>
-            <td><font color="#00b4d9">Aug 2024 </font></td>
-            <td>| I am joining <a target="_blank" href="https://www.rit.edu/nrtai/">NSF AWARE-AI Program</a> as a Research Trainee</td>
           </tr>
           <tr>
             <td><font color="#00b4d9">May 2024 </font></td>
