--- a/news.html
+++ b/news.html
@@ -213,6 +213,10 @@ input:checked + input ~ input:before {
         <table>
           <tr>
             <td><font color="#00b4d9">Jan 2026 </font></td>
+            <td>| I will be serving Area Chair at <a target="_blank" href="https://chi2026.acm.org/">CHI 2026</a> for the Poster Track.</td>
+          </tr>
+          <tr>
+            <td><font color="#00b4d9">Jan 2026 </font></td>
             <td>| Paper accepted at <a target="_blank" href="https://chi2026.acm.org/">ACM Conference on Human Factors in Computing Systems (CHI'26)</a> </td>
           </tr>
           <tr>
